# pc-comp-2018-1

./: .gitignore  CMakeLists.txt  README.md  README.org  parser.y  scanner.l
include/: cc_ast.h  cc_ast_f.h  cc_cod.h  cc_code_list.h  cc_dict.h  cc_list.h  cc_misc.h  cc_semantic.h  cc_tree.h  main.h
src/: cc_ast_f.c  cc_cod.c  cc_code_list.c  cc_dict.c  cc_gv.c  cc_list.c  cc_misc.c  cc_tree.c  main.c
src/example/: bubblesort  fatorial  fibonacci
tests/: README.org
tests/e1/: aval_030.tesh  aval_036.tesh  aval_044.tesh  aval_077.tesh  aval_078.tesh  avaliacao_02.tesh  avaliacao_16.tesh  entrada_077  entrada_078  valg_077.tesh  valg_078.tesh
tests/e2/: asl01.tesh  asl02.tesh  asl03.tesh  asl04.tesh  asl05.tesh  asl06.tesh  asl07.tesh  asl08.tesh  asl09.tesh  asl10.tesh  asl11.tesh  asl12.tesh  asl13.tesh  asl14.tesh  asl15.tesh  asl16.tesh  asl17.tesh  asl18.tesh  asl19.tesh  asl20.tesh  asl21.tesh  asl22.tesh  asl23.tesh  asl24.tesh  asl25.tesh  asl26.tesh  asl27.tesh  asl28.tesh  asl29.tesh  asl30.tesh  asl31.tesh  asl32.tesh  asl33.tesh  asl34.tesh  asl35.tesh  asl36.tesh  asl37.tesh  asl38.tesh  asl39.tesh  asl40.tesh  (+148 more)
tests/e4/: qwe01.tesh  qwe02.tesh  qwe03.tesh  qwe05.tesh  qwe06.tesh  qwe07.tesh  qwe08.tesh  qwe09.tesh  qwe10.tesh  qwe11.tesh  qwe12.tesh  qwe13.tesh  qwe14.tesh  qwe15.tesh  qwe16.tesh  qwe17.tesh  qwe18.tesh  qwe19.tesh  qwe20.tesh  qwe21.tesh  valgrind_qwe01.tesh  valgrind_qwe02.tesh  valgrind_qwe03.tesh  valgrind_qwe05.tesh  valgrind_qwe06.tesh  valgrind_qwe07.tesh  valgrind_qwe08.tesh  valgrind_qwe09.tesh  valgrind_qwe10.tesh  valgrind_qwe11.tesh  valgrind_qwe12.tesh  valgrind_qwe13.tesh  valgrind_qwe14.tesh  valgrind_qwe15.tesh  valgrind_qwe16.tesh  valgrind_qwe17.tesh  valgrind_qwe18.tesh  valgrind_qwe19.tesh  valgrind_qwe20.tesh  valgrind_qwe21.tesh
tests/e5/: asd01.tesh  asd02.tesh  asd03.tesh  asd04.tesh  asd05.tesh  asd06.tesh  asd07.tesh  asd08.tesh  asd09.tesh  asd10.tesh  asd11.tesh  asd12.tesh  asd13.tesh  asd14.tesh  asd15.tesh  asd16.tesh  asd17.tesh  asd18.tesh  asd19.tesh  avaliacao_01_0.tesh  avaliacao_01_1.tesh  avaliacao_03_0.tesh  avaliacao_03_1.tesh  valgrind_asd01.tesh  valgrind_asd02.tesh  valgrind_asd03.tesh  valgrind_asd04.tesh  (+15 more)
(+104 files in other folders)
